--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
         </div>
         <nav class="navbar">
           <button onclick="location.reload()">reset</button>
-          <a href="./faq.html" target="_blank">FAQ</a>
+          <a href="https://ai-cohort-faq.netlify.app/" target="_blank">FAQ</a>
         </nav>
         <div id="theme-toggler" class="fas fa-moon"></div>
       </div>
