--- a/client/index.html
+++ b/client/index.html
@@ -29,6 +29,7 @@
       <div id="menu-btn" class="fas fa-bars"></div>
       <!-- header section  -->
       <div class="reset-btn">
+        <!-- reset btn -->
         <i class="fas fa-repeat"></i>
       </div>
       <!-- chat section  -->
