--- a/client/index.html
+++ b/client/index.html
@@ -30,6 +30,7 @@
       <!-- header section  -->
       <div class="reset-btn">
         <!-- reset btn -->
+        <!-- reset btn -->
         <i class="fas fa-repeat"></i>
       </div>
       <!-- chat section  -->
