--- a/client/index.html
+++ b/client/index.html
@@ -45,8 +45,10 @@
           <i class="fa  fa-circle-info"></i>
           <h2> Utilization</h2>
           <div class="paragraphs">
-            <p>• Cannot answer based on previous inquiries so you have to copy and paste your previous question</p>
-          <p>• If you ask it to write a long text, article or essay and it does not complete the response please copy the last part that in wrote and paste it in and ask it to finish </p>
+            <p>• Unable to answer your previous question, so please copy and paste the query it has provided again. Then ask on that</p>
+          <p>•  If you ask the AI Cohort to write a long text, article, or essay and it does not complete the response, please copy the last part it wrote and then ask it to continue from that point. This will ensure that any ideas already expressed in its previous attempt remain intact while allowing more material to be added. Additionally, consider providing any additional context and information at this stage in order to help guide the AI Cohort towards creating a more complete response. </p>
+          <p>Do not use it to generate HTML code</p>
+          <p>Please complete your prompts with punctuation</p>
           </div>
           
         </div>
@@ -70,9 +72,9 @@
           <i class="fa fa-triangle-exclamation"></i>
           <h2>Limitations</h2>
           <div class="paragraphs">
-            <p>• Can not remembers what user said earlier in the conversation</p>
+            <p>• Can not remember what user said earlier in the conversation</p>
           <p>• Will occasionally generate incorrect information </p>
-          <p>• Max Tokens 2000 </p>
+          <p>• Max Tokens 3000 </p>
           <p>• Cannot generate good html code but can help you with other programming langauges problems </p>
           <p>• Limited knowledge of world and events after 2021 </p>
           <p>• Text might break and it might generate random characters </p>
