--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,9 @@
           <button class="reset"><i class="fas fa-repeat"></i> Reset</button>
           
           <a href="https://ai-cohort-answers.netlify.app/" target="_blank"><i class="fa-sharp fa-solid fa-circle-info"></i>
-             FAQs</a>
+             FAQs</a><br><br><br>
+             <a href="https://ai-cohort-2.vercel.app/" target="_blank" class="Previous"><i class="fa fa-user"></i>
+              Upgrade</a>
              <p class="convo"><i>  Unfortunately, conversation cannot be preserved and so it can only be used like a search engine, which may take longer to receive a response if you have slower internet speeds.</i></p>   
         </nav>
         <div id="theme-toggler" class="fas fa-moon"></div>
